# mcp-osm

./: .env  Dockerfile  README.md  docker-compose.yml  osm.py  pyproject.toml
